Fix alignment bug

--- a/src/css/components/_show-date.scss
+++ b/src/css/components/_show-date.scss
@@ -5,7 +5,6 @@
   align-items: flex-start;
   align-self: flex-end;
   margin-left: 1em;
-  margin-bottom: 0.5em;
 
   .weekday {
     font-weight: 300;
