--- a/src/css/components/_show-time.scss
+++ b/src/css/components/_show-time.scss
@@ -1,6 +1,6 @@
 .time {
   align-self: flex-end;
-  margin-bottom: 0.5em;
   margin-left: 4.5em;
   font-size: 1rem;
+  line-height: 1.6;
 }
